hphp/hack/test/typecheck/as_expression/tuple5.php.like_types.exp
File "tuple5.php", line 9, characters 16-17:
Invalid argument (Typing[4110])
File "tuple5.php", line 12, characters 29-34:
Expected D<int>
File "tuple5.php", line 8, characters 3-4:
But got (D<T#1> & C<int>) from this "as" assertion
